tests/idris2/error002/expected
1/1: Building Error (Error.idr)
Error: While processing right hand side of wrong. Undefined name ys. 

Error.idr:6:17--6:19
   |
 6 | wrong xs = x :: ys
   |                 ^^

